--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,14 @@
     <div class="box column is-one-third">
       <h1 class="title has-text-centered">Typing Challenge</h1>
 
-      <p class="has-text-centered">{{ sentence }}</p>
+      <p class="has-text-centered">{{ randomText }}</p>
 
       <div class="field">
-        <input type="text" class="input" />
+        <input
+          type="text"
+          class="input"
+          (input)="onInput($event.target.value)"
+        />
       </div>
 
       <div class="box has-text-centered">
