--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
         />
       </div>
 
-      <div class="box has-text-centered">
+      <div *ngIf="enteredText === randomText" class="box has-text-centered">
         <h1 class="title">Success!</h1>
       </div>
     </div>
